# cryptor

./: .gitignore  README.md  _internal_config.py  _scenario.py  _scenario_builder.py  all.py  all_ct.py  all_ut.py  backend.py  backup_notes  bld_opts.UNISCHEMA  build.py  config.py  crp_opts.UNISCHEMA  cryptor.py  cryptor_cli.py  futuredev  graph_factory.py  pay_info.UNISCHEMA  requirements.txt  rnd_opts.UNISCHEMA  snippets  sys_opts.UNISCHEMA  tags  todo  ut.py  validate_opts.py  weaknesses
base/: dynconfig.py  repo_default_filename_cond.py  stage_runner.py
base/stage/: DIR_INFO  handler.py  handler_test_base.py  prop_change_info.py  register_text_handlers.py  rules.py  stage_runner.py  stage_runner_executor.py  test_text_handlers.py  text_handlers.py  write_handler_test_base.py
chains/: calldb.py  chaingen.py  chaingen_hlp_hdr.h  parse_descrip.py  real1.calldb  test.calldb  test_chaingen.jen  test_chaingen.py  test_chaingen_dfs.jen  test_chaingen_random.jen  vardb.py
common/: bit_rotate.py  bit_writer.py  buildsol.py  clear_dir.py  delete_nodes_containing_keys.py  dice_percent.py  dict_keychar_expander.py  dictapply.py  dir_from_template.py  ensure_known_shell_program.py  execcmd.py  fnmatch_one_of.py  gen_random_string.py  get_all_keys.py  get_next_filename_seqnum.py  get_schema_props.py  graph.py  includeable_dict_resolver.py  iteration_generator.py  jpath.py  line_reader.py  make_cmdline.py  merge_dicts.py  mirror_directory.py  mix_lists.py  multi_stream_writer.py  normalize.py  parse_scheme_address.py  pe_common.py  rangestr.py  rar_cmdline.py  recreate_dir.py  replace_all.py  schema2instance.py  sort_by_values.py  strargs2map.py  string_repl_positions.py  strlist_to_argparser.py  sx.py  test_schemas.py  (+3 more)
cpp_parts/: EVILPROC_TEMPLATE.cpp  ae.h  ae_wnd.cpp  ae_wnd.h  ae_xxx.cpp  ae_xxx.h  alloc.h  alloc_halloc.cpp  alloc_valloc.cpp  alloc_valloc.h  alloc_valloc.json  check_payload_info.h  dbg.h  decrypt.h  decrypt_cryptbin.cpp  decrypt_cryptbin.h  evil_common.cpp  evil_common.h  evilproc.h  exp_by_hash.cpp  exp_by_hash.h  ldr.cpp  ldr.h  ldr.json  locate.h  locate_binhex.cpp  locate_binhex.h  locate_binhex.json  locate_resource.cpp  locate_resource.h  lpfns.cpp  lpfns.h  ntdefs.h  pay.cpp  pay.h
evp/: evp_opts.UNISCHEMA  evpgen.py  getprot.py  page_prot.py  prot2memscn.py  prot_checks.py  prot_logic.py  prot_logic_checker.py  prot_logic_gen.py  protlogic_opts.UNISCHEMA  sec_mem_chars.py  test_evpgen_simple.py  test_prot_logic.py
infra/: arg_info.py  arg_processor.py  argparse_prediction.py  cli_conf_to_argv.py  cli_config.py  cli_config_aggregator.py  cli_seed.py  dyn_jen.py  dynjen_from_aggregator.py  jen.py  jif_resolver.py  option_string.py  parse_worker.py  seed.py  seed_db.py  seed_generate.py  seed_get_or_generate.py  test_cli_config_aggregator.py  test_cli_config_aggregator_with_jen.py  test_jen.py  test_unischema.py  testloop_runner.py  tool_cli.py  unischema.py
p2gen/: cmn.cpp  cmn.h  order_x64.txt  order_x86.txt  p2gen_main.cpp  test.bat  test.deb.bat  test.rel.bat  test_with_cfg.bat  vs.open_all.bat
p2gen/p2gen64/: p2gen64.sln  p2gen64.vcxproj
p2gen/p2gen86/: p2gen86.sln  p2gen86.vcxproj  p2gen86.vcxproj.filters
pg/: alphagen.UNISCHEMA  billet.py  fullgen.UNISCHEMA  intermed.py  output_gen.py  pgopts.UNISCHEMA  pm_generator.py  pm_processor.py  pms_for_test.py  pms_for_test001.dot  proggen.py  program_model.py  test_proggen.py
pg/billet_files/: cocrel_guids.h  loadlib_names.h  main.cpp  run_all_acts.cpp  run_all_acts.h
pg/pg_cpp/: act_cocrel.cpp  act_cocrel.h  act_loadlib.cpp  act_loadlib.h  wakers.cpp
reskit/: _extract-programfiles.bat  _extract-programfiles86.bat  _extract-win-tools-pt.bat  _extract-windows.bat  _extract.bat  extract.py  res_repository.py  resput.py  restest.py  test.cpp  work-reskit.txt
scripts/: clone_stub.bat  conemu_split.py  graph_info.py  ida_simplegraph.py  ida_simplegraph_OLD.py  impllib_from_dll.py  init_work_dir.py  make_startup_bats.py  pe_stat.py
sprayer/: _sourcegen.py  _struct_reorderer.py  _wave.py  _wave_demo.py  fgFuncGenNew_ast.txt  fgfull.dot  fgnew_opts.UNISCHEMA  rgdumb_opts.UNISCHEMA  rgold_opts.UNISCHEMA  rgspray_opts.UNISCHEMA  spgaux_opts.UNISCHEMA  spraygen.py  spraygen_opts.UNISCHEMA  spraytab.py  validate_opts.py
sprayer/ccode/: evaluator.py  machine_int.py  (+5 more)
sprayer/test/spraytest_project_files/: CMakeLists.txt  cleanup.bat  dbgutils.h  regen86vs14.bat  regen86vs16.bat
srv/: add_customer.py  cryptor_srv.py
stub/: CMakeLists.txt  bootstrap.bat  build64.bat  build86.bat  cleanup.bat  dllmain.cpp  gened_code.cpp  regen64.bat  regen64vs16.bat  regen86.bat
stub_tools/: ABOUT_DIR.nfo  addresource.py  bin2media.py  bin2split.py  binhex_facade.py  c_defs.py  construct.py  create_binhide_bat_file.py  create_payload_default.py  create_seed_file.py  cryptbin.py  gen_decay_src.py  gen_rand_buf.py  make_outdata.py  make_part_info_defs.py  mod_def_file.py  shuffle_link_order.py  strhash.py  strhash_selftest.py
test/: case.py  case_generator.py  case_runner.py  casetest.py  casetest_opts.UNISCHEMA  evptest.py  evptest_case_generator.py  fix_crp_opts_for_test.py  full_seed_test.py  ldr_project.py  ldrtest.py  p2gen_py.py  parttest.py  paytest.concept.nfo  paytest.py  paytest_case_generator.py  paytest_preparation.py  rgold_paytest.py  run_info.py  seed_test.py  simple_seed_test.py  spraytest_project_from_billet.py  test_all_unischemas.py  test_backend.py  test_cryptor.py  test_graph_factory.py  test_opt_validation.py  testbin.rar  tst_opts.UNISCHEMA  tst_opts.py
test_tools/: barabasi.py
tools/: jit_virprog_disable.bat  jit_virprog_enable.bat
trasher/: popularimports2touchprj.py  test_popularimports2touchprj.py  test_touchgen.py  test_trash_add.py  touch_collector.py  touchgen.py  trash_add.py  trasher_opts.UNISCHEMA
wd/: BROKEN  blacklist_dlls.lst  blacklist_fns.lst  blacklist_paths_windows.lst  collect.py  collect_popular_imports.py  collect_resdbs.py  collect_touchprjs.py  current_state.nfo  test.py  test_resdbs.py  test_touchprjs.py  touchprj_from_demo.py  touchprj_from_popular_imports.py
(+255 files in other folders)
